--- a/app/src/main/res/menu/barra_busqueda.xml
+++ b/app/src/main/res/menu/barra_busqueda.xml
@@ -9,4 +9,8 @@
         app:showAsAction="always|collapseActionView"
         app:actionViewClass="androidx.appcompat.widget.SearchView" />
 
+    <item
+        android:id="@+id/cerrar_sesion"
+        android:title="Cerrar Sesion" />
+
 </menu>
