--- a/app/src/main/res/layout/custom_dialog.xml
+++ b/app/src/main/res/layout/custom_dialog.xml
@@ -44,17 +44,8 @@
                     android:id="@+id/edt_urlD"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="url" />
+                    android:hint="Url" />
             </com.google.android.material.textfield.TextInputLayout>
-
-            <Button
-                android:id="@+id/btn_dialogo"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Buscar"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textinputcustom" />
 
             <ImageView
                 android:id="@+id/imageViewD"
@@ -63,8 +54,8 @@
                 android:layout_marginTop="24dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/btn_dialogo"
-                app:srcCompat="@drawable/ic_baseline_add_24" />
+                app:layout_constraintTop_toBottomOf="@+id/textinputcustom"
+                app:srcCompat="@drawable/ic_baseline_image_search_24" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
