--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Registro"
-    android:layout_margin="24dp">
+    android:layout_marginTop="16dp">
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textInputLayout3"
@@ -18,6 +18,7 @@
         app:counterEnabled="true"
         app:counterMaxLength="20"
         app:endIconMode="clear_text"
+        android:layout_margin="24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -40,6 +41,7 @@
         app:helperTextEnabled="true"
         app:helperText="Minimo  8 Caracteres"
         app:errorEnabled="true"
+        android:layout_margin="24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">
@@ -62,6 +64,7 @@
         app:endIconMode="password_toggle"
         app:helperTextEnabled="true"
         app:helperText="Minimo  8 Caracteres"
+        android:layout_margin="24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout6">
